add network overview & splits api
