# cmd/dora-explorer/main.go
@@ -306,7 +306,9 @@ func startApi(router *mux.Router) {
 		{"/v1/mev_blocks", api.APIMevBlocksV1, []string{"GET", "OPTIONS"}, 1},
 
 		// Network APIs
+		{"/v1/network/overview", api.APINetworkOverviewV1, []string{"GET", "OPTIONS"}, 1},
 		{"/v1/network/forks", api.APINetworkForksV1, []string{"GET", "OPTIONS"}, 1},
+		{"/v1/network/splits", api.APINetworkSplitsV1, []string{"GET", "OPTIONS"}, 1},
 
 		// Client APIs
 		{"/v1/clients/execution", api.APIExecutionClients, []string{"GET", "OPTIONS"}, 1},
